--- a/pom.xml
+++ b/pom.xml
@@ -150,21 +150,15 @@
             <version>${fastjson.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.bestpay</groupId>
-            <artifactId>bestpay</artifactId>
-            <version>1.1</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.ws.commons.axiom</groupId>
-            <artifactId>axiom-api</artifactId>
-            <version>1.2.13</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.ws.commons.axiom</groupId>-->
+            <!--<artifactId>axiom-api</artifactId>-->
+            <!--<version>1.2.13</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
