--- a/pom.xml
+++ b/pom.xml
@@ -155,9 +155,9 @@
             <version>2.6</version>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>org.apache.ws.commons.axiom</groupId>-->
-            <!--<artifactId>axiom-api</artifactId>-->
-            <!--<version>1.2.13</version>-->
+        <!--<groupId>org.apache.ws.commons.axiom</groupId>-->
+        <!--<artifactId>axiom-api</artifactId>-->
+        <!--<version>1.2.13</version>-->
         <!--</dependency>-->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -221,20 +221,27 @@
             <version>1.4.4</version>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>org.apache.axis2</groupId>-->
-            <!--<artifactId>axis2-adb</artifactId>-->
-            <!--<version>1.6.2</version>-->
+        <!--<groupId>org.apache.axis2</groupId>-->
+        <!--<artifactId>axis2-adb</artifactId>-->
+        <!--<version>1.6.2</version>-->
         <!--</dependency>-->
         <!--<dependency>-->
-            <!--<groupId>org.apache.axis2</groupId>-->
-            <!--<artifactId>axis2-transport-local</artifactId>-->
-            <!--<version>1.6.2</version>-->
+        <!--<groupId>org.apache.axis2</groupId>-->
+        <!--<artifactId>axis2-transport-local</artifactId>-->
+        <!--<version>1.6.2</version>-->
         <!--</dependency>-->
         <!--<dependency>-->
-            <!--<groupId>org.apache.axis2</groupId>-->
-            <!--<artifactId>axis2-transport-http</artifactId>-->
-            <!--<version>1.6.2</version>-->
+        <!--<groupId>org.apache.axis2</groupId>-->
+        <!--<artifactId>axis2-transport-http</artifactId>-->
+        <!--<version>1.6.2</version>-->
         <!--</dependency>-->
+        <dependency>
+            <groupId>org.jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
