提交配置修改
Signed-off-by: jumping <yinjiangping@bestpay.com.cn>

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -13,7 +13,7 @@ jdbcTimeBetweenEvictionRunsMillis  = 10000
 #\u6570\u636E\u5E93\u5730\u5740
 jdbcUrl       =jdbc:mysql://127.0.0.1:3306/flow?useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull
 jdbcUsername  = flow
-jdbcPassword  = flow
+jdbcPassword  = deWn#%8qc!
 
 
 # REDIS (RedisProperties)
