--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -11,19 +11,17 @@ jdbcTestOnBorrow                   = false
 jdbcTestWhileIdle                  = true
 jdbcTimeBetweenEvictionRunsMillis  = 10000
 #\u6570\u636E\u5E93\u5730\u5740
-jdbcUrl       =jdbc:mysql://127.0.0.1:3306/flow?useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull
+jdbcUrl       =jdbc:mysql://101.200.141.171:3306/flow?useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull
 jdbcUsername  = flow
 jdbcPassword  = deWn#%8qc!
 
 
 # REDIS (RedisProperties)
-spring.redis.database= # database name
-spring.redis.host=127.0.0.1 # server host
-spring.redis.password= # server password
-spring.redis.port=6379 # connection port
-spring.redis.pool.max-idle=8 # pool settings ...
-spring.redis.pool.min-idle=0
-spring.redis.pool.max-active=8
-spring.redis.pool.max-wait=-1
-spring.redis.sentinel.master= # name of Redis server
-spring.redis.sentinel.nodes= # comma-separated list of host:port pairs
+spring.redis.hostName=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.pool.maxActive=8
+spring.redis.pool.maxWait=-1
+spring.redis.pool.maxIdle=8
+spring.redis.pool.minIdle=0
+spring.redis.timeout=0
