--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -19,7 +19,7 @@ jdbcPassword  = deWn#%8qc!
 # REDIS (RedisProperties)
 spring.redis.hostName=127.0.0.1
 spring.redis.port=6379
-spring.redis.password=
+spring.redis.password=flow123,
 spring.redis.pool.maxActive=8
 spring.redis.pool.maxWait=-1
 spring.redis.pool.maxIdle=8
