--- a/pom.xml
+++ b/pom.xml
@@ -242,7 +242,11 @@
             <artifactId>jdom</artifactId>
             <version>1.1.3</version>
         </dependency>
-
+            <dependency>
+                <groupId>net.glxn</groupId>
+                <artifactId>qrgen</artifactId>
+                <version>1.2</version>
+            </dependency>
 
     </dependencies>
 
